# SymCRust-lean

./: .gitignore  Cargo.toml  MLKEM.lean  Makefile  README.md  SHA3.lean  Spec.lean  aeneas-config.yml  build.rs  clippy.toml  lakefile.lean  rust-toolchain.toml  symcrust_cargo.py
.cargo/: config.toml  config_internal.toml
Intrinsics/: INTRINSICS.md
Spec/: NatBit.lean  Round.lean
Spec/AES/: Spec.lean
Spec/MLKEM/: Spec.lean
Spec/SHA3/: Permutation.lean  REPORT.md  Spec.lean  XOF.lean  XOFProperties.lean
SpecTests/: MLKEM.lean  SHA3.lean  TestUtils.lean
SpecTests/MLKEM/: TestVectors.lean
SpecTests/SHA3/: TestVectors.lean
Symcrust/: Code.lean  Properties.lean
Symcrust/Code/: EXTRACTION.md  Funs.lean  TypesExternal.lean  TypesExternal_Template.lean
Symcrust/Properties/: MLKEM.lean  SHA3.lean  SliceToSpec.lean
benches/: aes.rs  ntt.rs  sha3.rs
data/: index.scip
lean/: .gitignore  Intrinsics.lean  SpecTests.lean  Symcrust.lean  lakefile.lean
lean/Intrinsics/: BVRealize.lean  Bytes.lean  Simd.lean
lean/Spec/: Defs.lean
lean/SpecTests/: DefsTest.lean
lean/scripts/: loc-verifiedcrypto.sh  strip-spec-nonnormative.py
scripts/: README.md  disambiguate-trait-fields.py  loc-verifiedcrypto.sh  prune-external-template.py  run-intrinsic-difftests.sh  strip-iterator-zip-rev.py
src/: block_cipher.rs  common.rs  hash.rs  kernel_stubs.rs  lib.rs  symcryptcommon.rs  test_helpers.rs
src/aes/: aes.rs  aes_gcm.rs  aes_neon.rs  aes_xmm.rs  ffi.rs  tests.rs
src/mlkem/: ffi.rs  hash.rs  key.rs  mlkem.rs  ntt.rs  ntt_avx2.rs  ntt_neon.rs  ntt_xmm.rs  test.rs  (+1 more)
(+186 files in other folders)
