[package]
name = "symcrust"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"

[lib]
# Adding lib for the sake of enabling benchmarks, apparently criterion won't
# run against just staticlib
crate-type = ["staticlib", "lib"]

[profile.dev]
panic="abort"

[profile.release]
lto = true
codegen-units = 1
debug = true
panic="abort"

[dev-dependencies]
rand = { version = "0.9.1" }
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4.3"
assert_hex = "0.4.1"
ghash = "0.5.1"

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "aes"
harness = false

[[bench]]
name = "sha3"
harness = false

# Intrinsic test harnesses for rust verification modelling.
[[test]]
name = "intrinsics_verify_tests"
path = "src/verify/tests/mod.rs"

[features]
benchmarking = ["std"]
std = []
kernel = []     # Stubs for kernel-mode linking
aes = []        # AES implementation
ffi = []        # FFI bindings (currently only applies to AES)
# `verify` enables the Aeneas extraction path: cfg-gates the SIMD intrinsic
# bodies in favour of trait-based dispatch and turns on the `verify::*`
# tool-level attributes consumed by Charon. Charon is invoked with
# `--features verify` from SymCRust/Makefile for the active proof tree
# (SHA-3 + ML-KEM).
verify = ["std"]